# MathLib

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  constant_8hpp.html  count__digits_8hpp.html  cylinder_8hpp.html  dir_415e694e93811b5d697a810ff00d69f3.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  float_8hpp.html  getGravitationalAttraction_8hpp.html  getSchwarzschild_8hpp.html  group__Math.html  group__Math__GravitationalAttraction.html  group__Math__Schwarzschild.html  group__Math__count__digits.html  group__Math__cylinder.html  group__Math__pair.html  group__Math__power.html  group__Math__prime.html  group__Math__sphere.html  group__Math__square__root.html  index.html  modules.html  namespacega.html  namespacemath.html  namespacemath_1_1square__root.html  namespacemy.html  namespacemy_1_1math.html  namespacemy_1_1math_1_1count__digits.html  namespacemy_1_1math_1_1cylinder.html  namespacemy_1_1math_1_1fp.html  (+14 more)
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  spell.cmake  variables.cmake
cmake/lib/: json.cmake  raylib.cmake
example/: CMakeLists.txt  simple_example.cpp
include/MathLib/: count_digits.hpp  float.hpp  getSchwarzschild.hpp  power.hpp  random.hpp  sphere.hpp  square_root.hpp
include/mathlib/: MathLib.hpp  constant.hpp  count_digits.hpp  cylinder.hpp  float.hpp  getGravitationalAttraction.hpp  getSchwarzschild.hpp  pair.hpp  power.hpp  prime.hpp  prime_imp.hpp  random.hpp  sphere.hpp  square_root.hpp
test/: CMakeLists.txt
test/source/: MathLib_test.cpp  cylinder_test.cpp  float_test.cpp  getGravitationalAttraction_test.cpp  getSchwarzschild_test.cpp  power_test.cpp  random_bench.cpp  random_test.cpp  sphere_test.cpp
test/source/benchmark/: float_bench.cpp  random_bench.cpp
test/source/test/: cylinder_test.cpp  float_test.cpp  getGravitationalAttraction_test.cpp  getSchwarzschild_test.cpp  power_test.cpp  random_test.cpp  sphere_test.cpp
tools/: ninja-builder.sh
